<resources>
    <string name="app_name">Assignment3</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="runStart">Start</string>
    <string name="runStop">Stop</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">Cancel</string>
    <string name="distance">Distance (in Meter) </string>
    <string name="time">Time (in Second) </string>
    <string name="speed">Speed</string>
    <string name="pace">Pace</string>
    <string name="toMap">Go To Map</string>
    <string name="toCalculator">To Calculator</string>
</resources>
