
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp5216.sydney.edu.au.assignment3.CalculatorActivity" >

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance" />

    <EditText
        android:id="@+id/distanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/distance"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/distanceText"
        android:text="@string/time" />

    <EditText
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeText"
        android:layout_marginRight="20px"
        android:text="@string/speed" />

    <TextView
        android:id="@+id/speedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeText"
        android:layout_toRightOf="@id/speed"
        android:text="0 m/s" />

    <TextView
        android:id="@+id/pace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/speedText"
        android:layout_marginRight="20px"
        android:text="@string/pace" />

    <TextView
        android:id="@+id/paceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/speedText"
        android:layout_toRightOf="@id/pace"
        android:text="0 s/m" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/paceText"
        android:layout_below="@+id/paceText"
        android:layout_marginTop="25dp"
        android:onClick="onCalculateClick"
        android:text="@string/calculate" />


    <Button
        android:id="@+id/btnToMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/paceText"
        android:layout_below="@+id/btnCalculate"
        android:layout_marginTop="25dp"
        android:onClick="onToMapClick"
        android:text="@string/toMap" />


</RelativeLayout>


