<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MapsActivity">


    <Button
        android:id="@+id/btnRunStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/map"
        android:onClick="onRunStartClick"
        android:text="@string/runStart" />

    <Button
        android:id="@+id/btnRunStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/map"
        android:layout_toRightOf="@id/btnRunStart"
        android:onClick="onRunStopClick"
        android:text="@string/runStop" />
    <Button
        android:id="@+id/btnToCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/map"
        android:layout_toRightOf="@id/btnRunStop"
        android:onClick="onToCalculatorClick"
        android:text="@string/toCalculator" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_above="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="1400px"

        />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="location" />



</RelativeLayout>